# ConfigurationPage

./: .gitignore  Makefile  README.md  build.sh  configfile.c  configfile.h  ctxrdp.c  ctxrdp.h  func.h  init.c  init.h  layout.c  layout.h  main.c  vars.h
ConfigPage/: .gitignore  CMakeLists.txt  ConfigPage.pro  ConfigPagev2  ConfigPagev2.pro  README  README.md  clean_cmake.sh  clean_doc.sh  exec_cmd.cpp  exec_cmd.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  proxymodel.cpp  proxymodel.h  session.vim  ui_mainwindow.h
ConfigPage/ConfigPagev2/: ConfigPagev2.pro
ConfigPage/Vortrag/: presentation.tex  xrandr.sh
ConfigPage/doc/: Doxyfile
ConfigPage/inc/: custom_exceptions.h  errorMsg.h  exec_cmd.h  ini_parser.h  nm_check_functions.h  nm_get_functions.h  nm_make_file.h  nm_make_functions.h  parameter_return.h  profile.h  proxyModel.h  remove_file.h  set_permission.h  setting.h
ConfigPage/languages/: de.ini  en.ini  es.ini  fr.ini
ConfigPage/profiles/: default_profile.ini
ConfigPage/scripts/: change_screen_resolution.py  get_dns.sh  get_gateway.sh  get_hardware.sh  get_ip_ethernet.sh  get_netmask.sh  rehash_certs.sh  start_StartPage.sh
ConfigPage/setting/: setting.ini
ConfigPage/src/: custom_exceptions.cpp  error.cpp  exec_cmd.cpp  ini_parser.cpp  mainwindow_citrix_rdp.cpp  mainwindow_handle_custom_exceptions.cpp  mainwindow_language_keyboard.cpp  mainwindow_nm_network_wlan.cpp  mainwindow_picture.cpp  mainwindow_profile.cpp  nm_check_functions.cpp  nm_get_functions.cpp  nm_make_file.cpp  nm_make_functions.cpp  parameter_return.cpp  profile.cpp  proxyModel.cpp  remove_file.cpp  set_permission.cpp  setting.cpp
ConfigPage/test/: unitTest.cpp  unitTest.h
files/DEBIAN/: control
files/opt/IT4S/: ConfigPage.sh
files/opt/IT4smart/: ConfigPage.sh
settings/: interfaces.static  thinclient.cfg  thinclient.cfg~
